This is 3-commit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,47 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Url Shortner app</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="./styles/home.css">
-</head>
-<body>
-    <header>
-        <nav class="light-blue lighten-5 blue-text">
-            <ul>
-                <li>Home</li>
-                <li>API</li>
-                <li>sign in/up</li>
-            </ul>
-            <ul>
-                <li>GitHub</li>
-                <li>Instagram</li>
-                <li>Telegram</li>
-                <li>YouTube</li>
-            </ul>
-        </nav>
+    <link rel="stylesheet" href="./styles/home.css" />
+  </head>
+  <body class="bg-light">
+    <header class="container-fluid md-5 border">
+      <nav class="navbar container mx-md-3">
+        <ul class="d-flex">
+          <li><a href="/">Home </a></li>
+          <li><a href="">API </a></li>
+          <li><a href="">DOCS </a></li>
+        </ul>
+        <ul class="d-flex">
+          <li><a href="">Telegram </a></li>
+          <li><a href="">Instagram </a></li>
+          <li><a href="">GitHub </a></li>
+          <li><a href="">YouTube </a></li>
+        </ul>
+      </nav>
     </header>
-    <main>
-        <div class="info blue-text text-darken-2">
-            <p>Assalomu alaykum. Bu <b> url-shortner</b>(url qisqartiruvchi) dasturi <b> Akbar Abdusattorov</b> tomonidan yaratildi!!!(uz)</p>
-            <p>Hello there. This <b> url-shortner</b> app was created by <b> Akbar Abdusattorov </b> !!! (en)</p>
-            <p>Привет. Эта программа для <b> url-shortner</b>(сокращения URL-адресов) была создана <b> Акбаром Абдусатторовым </b> !!! (en)</p>
-        </div>
-        <input type="text" name='fulllUrl' id="urlInput">
-        <button class="waves-effect waves-light light-blue" id="submit">Kichraytirmoq</button>
-        <div id="results">
-            You short url:
-        </div>
-        <button class="waves-effect waves-light light-blue" id='clipboardB' onclick="copyFunction()"> Copy short url </button>
-        <input type="text" id="clipboard" style="display: none;">
+    <main class="container border">
+      <div class="container-fluid d-flex">
+        <p>
+          Assalomu alaykum. Bu <b> url-shortner</b>(url qisqartiruvchi) dasturi
+          <b> Akbar Abdusattorov</b> tomonidan yaratildi!!!(uz)
+        </p>
+        <p>
+          Hello there. This <b> url-shortner</b> app was created by
+          <b> Akbar Abdusattorov </b> !!! (en)
+        </p>
+        <p>
+          Привет. Эта программа для <b> url-shortner</b>(сокращения URL-адресов)
+          была создана <b> Акбаром Абдусатторовым </b> !!! (en)
+        </p>
+        <p id="results"></p>
+      </div>
+      <input type="text" class="form-control" name="fulllUrl" id="urlInput" />
+      <div class="container-fluid">
+        <button id="submit" class="btn btn-primary">Kichraytirmoq</button>
+        <button id="clipboardB" class="btn btn-primary">Copy short url</button>
+      </div>
+      <input type="text" id="clipboard" style="display: none" />
     </main>
-    <footer class="light-blue lighten-5 blue-text">
-        Developed by akbarcoder
-    </footer>   
+    <footer class="container border">
+      Developed by <a href="https://instagram.com/akbarcoder">akbarcoder</a>
+    </footer>
     <script src="./app/app.js"></script>
-</body>
+  </body>
 </html>
