--- a/src/client/not-found.html
+++ b/src/client/not-found.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/errorpage.css" />
     <title>Not found || Error page</title>
-</head>
-<body>
-    <h1>Error || Xatolik</h1>
-    <p>Uzur bu sahifa bizning bazamizda mavjud emas!!! (uz)</p>
-    <p>К сожалению, этой страницы нет в нашей базе !!! (ru)</p>
-    <p>Sorry, this page is not available in our database !!! (en)</p>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <header class="container-fluid md-5 border">
+      <nav class="navbar mx-md-5">
+        <ul class="d-flex">
+          <li>Home</li>
+          <li>API</li>
+          <li>sign in/up</li>
+        </ul>
+        <ul class="d-flex">
+          <li>Telegram</li>
+          <li>Instagram</li>
+          <li>GitHub</li>
+          <li>YouTube</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container border">
+      <h1>404 || Error || Xatolik</h1>
+      <p>Uzur bu sahifa bizning bazamizda mavjud emas!!! (uz)</p>
+      <p>К сожалению, этой страницы нет в нашей базе !!! (ru)</p>
+      <p>Sorry, this page is not available in our database !!! (en)</p>
+    </main>
+    <footer class="container-fluid border">Developed by akbarcoder</footer>
+  </body>
 </html>
